DataGrid is Filled

--- a/Logic.UI/App.config
+++ b/Logic.UI/App.config
@@ -9,4 +9,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="VideothekEntities" connectionString="metadata=res://*/DBVideothek.csdl|res://*/DBVideothek.ssdl|res://*/DBVideothek.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=W011-226SYS\SQLEXPRESS;initial catalog=Videothek;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
