--- a/Logic.UI/Logic.UI.csproj
+++ b/Logic.UI/Logic.UI.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -66,14 +68,73 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchivePassword.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Article.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ArticleRented.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Category.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Customer.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBService.cs" />
+    <Compile Include="DBVideothek.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBVideothek.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBVideothek.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBVideothek.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBVideothek.edmx</DependentUpon>
+    </Compile>
     <Compile Include="MainViewModel.cs" />
     <Compile Include="NavigationMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserLogIn.cs">
+      <DependentUpon>DBVideothek.tt</DependentUpon>
+    </Compile>
     <Compile Include="ViewModelLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="DBVideothek.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DBVideothek.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DBVideothek.edmx.diagram">
+      <DependentUpon>DBVideothek.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DBVideothek.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBVideothek.edmx</DependentUpon>
+      <LastGenOutput>DBVideothek.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DBVideothek.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBVideothek.edmx</DependentUpon>
+      <LastGenOutput>DBVideothek.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
